@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-25T12:30:01Z",
-  "count_outdated" : 2842,
-  "uniques_outdated" : 906,
+  "timestamp" : "2024-10-28T12:31:24Z",
+  "count_outdated" : 2843,
+  "uniques_outdated" : 907,
   "count" : 2858,
   "uniques" : 912,
   "views" : [
-    {
-      "timestamp": "2024-10-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-16T00:00:00Z",
       "count": 1,
