@@ -1,12 +1,7 @@
 {
-  "count": 16,
-  "uniques": 6,
+  "count": 15,
+  "uniques": 5,
   "views": [
-    {
-      "timestamp": "2024-10-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-10-16T00:00:00Z",
       "count": 1,
