@@ -1,3 +1,12 @@
+2024-10-28T12:31:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11553967293 # 615
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-28
+* notice: last 14d: unq all: 5 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 906 2842 / 912 2858
+* notice: next accum: outdated-unq outdated-all / unq all: 907 2843 / 912 2858
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-10-14] / []
+
 2024-10-25T12:30:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11518234936 # 609
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-25
